Removing graalvm, using jlink for native builds